frequences/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frequences
  namespace: linguist-system
  labels:
    app: frequences
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frequences
  template:
    metadata:
      labels:
        app: frequences
    spec:
      containers:
        - name: frequences-container
          image: frequences
          resources:
            limits:
              memory: 1000Mi
              cpu: 1
            requests:
              memory: 500Mi
              cpu: 1
          ports:
            - containerPort: 8074
      imagePullSecrets:
        - name: reg-sample
