frequences/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frequences
  namespace: linguist-system
  labels:
    app: frequences
spec:
  selector:
    app: frequences
  ports:
    - protocol: TCP
      port: 8074
      targetPort: 8074
